--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         
         <script type="application/javascript">
             $(document).ready(function(){ //called when browser loads all the resource you need a $ to load the script inside the browser
-
-                var Navigate = new Clazz.Navigate()
-                document.Navigate = Navigate.Navigate
+//var Navigate = require('./Navigate.js');
+                var navigate = new Clazz.Navigate();
+                //document.Navigate = Navigate.Navigate
                 
                 var addToCartWidget = new Clazz.addToCartWidget(document.config);
                 var addToCartWidgetContainer = document.getElementById("addToCartWidgetContainer");
