--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         
         <script type="application/javascript">
             $(document).ready(function(){ //called when browser loads all the resource you need a $ to load the script inside the browser
-                //var Navigate = new Clazz.Navigate(document.config);
-                //document.Navigate = Navigate.Navigate;
+                var Navigate = new Clazz.Navigate();
+                document.Navigate = Navigate.Navigate;
 
                 var addToCartWidget = new Clazz.addToCartWidget(document.config);
                 var addToCartWidgetContainer = document.getElementById("addToCartWidgetContainer");
