--- a/addToCartWidgetContainer.html
+++ b/addToCartWidgetContainer.html
@@ -2,4 +2,5 @@
         <div id="headerWidgetContainer"></div>
         <div id="customerDetailsWidgetContainer"></div>
         <div id="newWidgetContainer"></div>
+        <div id="thirdWidgetContainer"></div> 
 </div>
