--- a/page1content.html
+++ b/page1content.html
@@ -1,4 +1,4 @@
-<div>
+<div id = "page1content">
     <p>This is going to be replaced</p>
     <button id="forwardButton" >Replace Content</button>      
 </div>
