--- a/page1MainContainer.html
+++ b/page1MainContainer.html
@@ -1,6 +1,5 @@
-<div id="header"></div>
-<div id="page1MainContainer">
 
+<div id="header"></div>
+<div id = "body">
         <div id="page1content"></div>
-        <div id="page2Content"></div>
 </div>
