--- a/page2Content.html
+++ b/page2Content.html
@@ -1,4 +1,4 @@
-<div id = "page2Content">
+<div id = "page1content">
     <p>Content Replaced.</p>
     <p>Second Page.</p>
     <button id="forwardButton2" >Replace Content</button>
