--- a/page1MainContainer.html
+++ b/page1MainContainer.html
@@ -1,5 +1,5 @@
 
 <div id="header"></div>
 <div id = "body">
-        <div id="page1content"></div>
+        <div id="page1Content"></div>       
 </div>
