--- a/page2Content.html
+++ b/page2Content.html
@@ -1,5 +1,5 @@
-<div id = "page1Content">
+<div>
     <p>Content Replaced.</p>
     <p>Second Page.</p>
-    <button id="backButton2" >Replace Content</button>
+    <button id="backButton" >Replace Content</button>
 </div>
