--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script type="application/javascript" src="/TemplateProvider.js"></script>
     <script type="application/javascript" src="/WidgetWithTemplate.js"></script>
     <script type="application/javascript" src="/page1MainWidget.js"></script>
-    <script type="application/javascript" src="/headerwidget.js"></script>
-    <script type="application/javascript" src="/page1contentwidget.js"></script>
+    <script type="application/javascript" src="/headerWidget.js"></script>
+    <script type="application/javascript" src="/page1ContentWidget.js"></script>
     <script type="application/javascript" src="/page2ContentWidget.js"></script>
     <script type="application/javascript" src="/Router.js"></script>
     </head>
