json data retrieval compeleted

--- a/page2Content.html
+++ b/page2Content.html
@@ -1,4 +1,5 @@
 <div>
+    <div>This is json {{name}} -- {{place}} -- {{state}}</div>
     <p>Content Replaced.</p>
     <p>Second Page.</p>
     <button id="backButton" >Replace Content</button>
